css  show bouteille final touch sprint 2

--- a/public/assets/css/composants/modal.css
+++ b/public/assets/css/composants/modal.css
@@ -62,11 +62,11 @@
 }
 
 
-/* .modal_btn-add{
-  display: flex;
-  justify-content: flex-end;
-  transform: translateY(35px);
-} */
+ .modal_btn-add{
+position: absolute;
+right: 0;
+bottom: 0
+} 
 
 
 
