--- a/public/assets/css/composants/btn.css
+++ b/public/assets/css/composants/btn.css
@@ -19,6 +19,7 @@
     border: 2px solid  var(--accent);
     padding: var(--espacements-small);
     border-radius: 5px;
+   ;
 } 
 
 .btn-close svg{
