--- a/public/assets/css/composants/profil.css
+++ b/public/assets/css/composants/profil.css
@@ -11,7 +11,7 @@
 }
  .profil div,.profil h1{
     display: flex;
-    text-align: center;
+    /* text-align: center; */
     /* margin: auto; */
   }
   .profil h1{
@@ -40,12 +40,13 @@
   .profil div:last-of-type{
     display: flex;
     flex-direction: column;
+    width: 100%;
   }
   .profil div:last-of-type a{
     display: flex;
     flex-direction: column;
     margin-top: var(--espacements-small);
-    align-items: center;
+    /* align-items: center; */
    
   }
 
