CSS pour le Triage

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -23,6 +23,7 @@
 @import "./composants/carte_commentaire.css";
 @import "./composants/note.css";
 @import "./composants/profil.css";
+@import "./composants/triage.css";
 
 
 /*-------- Import administration ---------*/
