--- a/public/assets/css/composants/btn.css
+++ b/public/assets/css/composants/btn.css
@@ -4,7 +4,8 @@
     border-radius: 5px;
     transition: all 0.6s;
     padding: var(--espacements-small);
-   text-align: center;
+    text-align: center;
+    border: 2px solid  var(--accent);
 }
 
 .btn:hover{
