--- a/public/assets/css/composants/liste-btl.css
+++ b/public/assets/css/composants/liste-btl.css
@@ -27,7 +27,7 @@
 .liste-btl_liste{
     display: flex;
     flex-direction: column;
-    margin-top: var(--espacements-medium);
+    margin-top: var(--espacements-small);
     gap: var(--espacements-small);
     
 }
@@ -270,6 +270,14 @@
     border-radius: 50px;
     border: 1px solid #ccc;
     text-align: center;
- 
 }
 
+.liste-btl_vide > p {
+    text-align: center;
+    margin-bottom: var(--espacements-medium);
+}
+
+.liste-btl_vide > a {
+    display: block;
+    width: 100%;
+}
