--- a/public/assets/css/composants/modal.css
+++ b/public/assets/css/composants/modal.css
@@ -13,9 +13,7 @@
   height: 100%; 
   justify-content: center; 
   align-items: center;
-
 }
-
 
 /* .modal div{
    display: flex; 
@@ -60,16 +58,16 @@
 }
 
 
- .modal_btn-add{
-position: absolute;
-right: 0;
-top:5px;
+.modal_btn-add{
+  position: absolute;
+  right: 0;
+  top:5px;
 } 
 
 
 
 .modal_btn-add svg{
-   width: 30px;
+  width: 30px;
 }
 
 .modal_btn-delete{
@@ -84,6 +82,7 @@ top:5px;
   width: 100%;
   /* padding: 0 30px; */
 }
+
 /* .modal_confirm-btn .formBtl_form {
   width: ;
 
@@ -107,12 +106,9 @@ top:5px;
 }
 
 
-
 .modal_confirm-btn .btn{
   border: 1px solid var(--accent);
 }
-
-
 
 
 /* .modal_btn-delete .modal_confirm-btn{
@@ -134,48 +130,46 @@ top:5px;
 } */
 
 .modal-selector {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.4);
-  }
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
   
-  .modal-selector-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-  }
+.modal-selector-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
   
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
   
-  .close:hover, .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
+.close:hover, .close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
   
-  .modal-button {
-    display: flex;
-    margin: auto;
-    width: 75%;
-    justify-content: center;
+.modal-button {
+  display: flex;
+  margin: auto;
+  width: 75%;
+  justify-content: center;
 }
 
-
-  
-  .modal-button-confirm {
+.modal-button-confirm {
     background-color: var(--accent);
 }
 
@@ -209,4 +203,41 @@ body.pas-defilement {
 .modal .modal_btn{
   display: flex;
   justify-content: space-between
+}
+
+.modal-SAQ{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--primary_fade);
+  padding: var(--espacements-small);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--secondary);
+  padding-top: 80px;
+  overflow: auto;
+  max-height: 95vh;
+}
+
+.modal-SAQ .btnWrapper{
+    display: flex;
+    justify-content: space-between;
+    margin-top: var(--espacements-small);
+}
+
+.modal-SAQ select{
+  width: 100%;
+  border-radius: 20px;
+  color: black;
+}
+.modal-SAQ .btnWrapper>*  {
+    max-width: 40%;
+    margin: 0;
+}
+
+.over{
+
+  overflow: auto;
 }
