Gestion CSS et structure HTML dans cellier/show, pour correctif sur le visuel des cartes

--- a/public/assets/css/composants/liste-btl.css
+++ b/public/assets/css/composants/liste-btl.css
@@ -182,14 +182,14 @@
     display: flex;
     flex-direction: column;
     background:  var(--neutral);
-    gap: var(--espacements-small); 
-    padding: var(--espacements-small);
+    gap: var(--espacements-x_small); 
+    padding: var(--espacements-x_small);
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 4px;   
 }
 
 .liste-btl_img{
-    max-width: 75px;
+    width: 75px;
 } 
 
 
@@ -209,10 +209,16 @@
 .liste-btl_info{
     display: flex;
     flex-direction: column;
-    gap: var(--espacements-small);
+    gap: var(--espacements-x_small);
     justify-content: space-between;
     width: 100%;
 
+}
+
+.liste-btl_info section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 .liste-btl_tete{
     display: flex;
@@ -234,16 +240,18 @@
 
 .liste-btl_corps{
     display: flex;
-    gap: var(--espacements-x_small);
+    gap: var(--espacements-small);
 }
 
 .liste-btl_info_etoile {
-    font-size: 20px;
     display: flex;
-
+    position: relative;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
 }
+
 .liste-btl_info_etoile svg{
-    width: 20px;
+    width: 17px;
 }
 
 .liste-btl_info{
@@ -257,19 +265,20 @@
 
 .liste-btl_info_bouteilles{
     display: flex;
-    justify-content: center;
-    gap: var(--espacements-medium);
+    /* justify-content: center; */
+    gap: var(--espacements-x_small);
    
 }
 .liste-btl_info_bouteilles svg{
-    width: 45px;
+    width: 40px;
 }
 
 .liste-btl_info_bouteilles input{
-    width: 50px;
+    width: 40px;
     border-radius: 50px;
     border: 1px solid #ccc;
     text-align: center;
+    padding: 0;
 }
 
 .liste-btl_vide > p {
