--- a/public/assets/css/composants/btn.css
+++ b/public/assets/css/composants/btn.css
@@ -14,6 +14,9 @@
     border: 2px solid  var(--accent);
 }
 
+.btn:active, .btn:visited{
+    color: white;
+}
 .btn-reverse{
     background-color: white;
     color: black;
