--- a/public/assets/css/composants/login.css
+++ b/public/assets/css/composants/login.css
@@ -2,19 +2,43 @@
 .login_section{
     display: flex;
     flex-direction: column;
-   align-items: center;
-   margin-top: var(--espacements-large);
+    align-items: center;
+    margin-top: var(--espacements-large);
+    
 }
 
+.login_section>div{
+    width: 100%;
+}
 .login_form{
     display: flex;
     flex-direction: column;
     justify-content: center;
- 
-     margin-top: var(--espacements-medium);
+    margin-top: var(--espacements-medium);
+    width: 100%;
 }
-login_btn{
+
+.login_form div:not(:first-of-type){
+    margin-top: var(--espacements-small);
+}
+
+.login_souvenir{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
+}
+
+.login_section .lien{
+    display: flex;
+    gap: var(--espacements-x_small);
+    justify-content: flex-end;
+    margin: var(--espacements-x_small) 0;
+}
+
+.login_section .lien svg{
+    width: 15px;
+}
+
+.login_form button{
+   display: block;
+   width: 100%;
 }
