--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -14,6 +14,10 @@ a{
   font-family: var(--font-base);
 }
 
+a:visited, a:active{
+  color: black;
+}
+
 img{
   max-width: 100%;
 }
@@ -52,9 +56,11 @@ details summary::marker {
   padding-bottom: var(--espacements-small);
   font-size: 15px;
   display: flex;
-
 }
 
+.retour:visited, .retour:active{
+  color: var(--accent);
+}
 .retour svg{
   display: inline;
   width: 20px;
