--- a/public/assets/css/admin/pagination_admin.css
+++ b/public/assets/css/admin/pagination_admin.css
@@ -1,17 +1,99 @@
+ .pagination_admin{
+  display: flex;
+  justify-content: flex-end;
+  background-color: var(--accent);
+  color: white;
+  padding: var(--espacements-small);
+}
 
+/*
 .pagination_admin ul{
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
 
+
 .pagination_admin a{
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  padding: 0;
+  text-align: center;
+  color: white;
+}
+
+.pagination_admin a:actived{
+  background-color: white;
+  border-radius: 100%;
+  color: #fff;
+  color: var(--accent);
+}
+
+
+.page_admin-fleche{
+  width: 20px;
+} */
+
+/* .pagination_admin a{
   display: inline-block;
   padding: 10px 18px;
   color: #222;
 }
 .pagination_admin:first-of-type, .pagination_admin a:last-of-type, .pagination_admin .is-active{
-  background-color: var(--accent);
   color: #fff;
   font-weight: bold;
+} */
+
+/* 
+.pagination_admin ul {
+  list-style-type: none;
+  display: inline;
+  margin: 0;
+  padding: .5em;
+} */
+.pagination_admin ul li {
+  display: inline-block;
+  width: auto;
+  margin-inline: var(--espacements-x_small);
+  border: 2px solid transparent;
+
 }
+
+.pagination_admin ul li:hover, 
+.pagination_admin ul li:focus {
+  border: 2px solid white ;
+  border-radius: 20px;
+}
+
+.pagination_admin  a, .pagination_admin  span{
+  border: 2px solid transparent;
+  padding: 5px 10px;
+  font-size: 25px;
+  font-family: 'Red Hat Mono', monospace;
+}
+
+
+/* .pagination_admin a:focus,
+.pagination_admin a:hover {
+  border: 2px solid white;
+  border-radius: 20px; 
+} */
+
+.pagination_admin .active {
+  border-radius: 50px;
+  color: var(--accent);
+  background-color: white;
+  font-size: 20px;
+  
+}
+
+/* Disabled & Hidden Styles */
+.pagination_admin .disabled,
+.pagination_admin [hidden],
+.pagination_admin [disabled] {
+  opacity: .5;
+  pointer-events: none;
+}
+
+
