--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -5,6 +5,8 @@ font-family: 'Raleway', sans-serif; */
 
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=Raleway&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Mono:wght@300;400&display=swap');
+
 
 
 :root {
