finition pagination + page vins + debut stats

--- a/public/assets/css/admin/nav_admin.css
+++ b/public/assets/css/admin/nav_admin.css
@@ -4,6 +4,7 @@
     flex-direction: row;
     color: var(--secondary);
     justify-content: space-between;
+    padding: var(--espacements-small) var(--espacements-medium) ;
 }
 
 .nav_admin > * {
