--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -24,6 +24,7 @@
 @import "./composants/note.css";
 @import "./composants/profil.css";
 @import "./composants/triage.css";
+@import "./composants/stats.css";
 
 
 /*-------- Import administration ---------*/
