--- a/public/assets/css/admin/main_admin.css
+++ b/public/assets/css/admin/main_admin.css
@@ -1,5 +1,5 @@
 .main_admin {
-    margin: var(--espacements-large) var(--espacements-x_large) ;
+    margin: var(--espacements-large)  ;
     padding-bottom: var(--espacements-large);
 }
 
@@ -7,6 +7,11 @@
     width: 100%;
     margin: var(--espacements-large) auto 0;
     border-spacing: 0;
+}
+.top {
+  position: sticky;
+  top: 0;
+  background-color: white;
 }
 
 .main_admin th {
