Gestion du ScraperController, CSS, JS et View du Scraper

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -30,3 +30,4 @@
 @import "./admin/general_admin.css";
 @import "./admin/main_admin.css";
 @import "./admin/nav_admin.css";
+@import "./admin/scraper_admin.css";
