--- a/public/assets/css/composants/modal.css
+++ b/public/assets/css/composants/modal.css
@@ -13,14 +13,8 @@
   height: 100%; 
   justify-content: center; 
   align-items: center;
+  z-index: 10;
 }
-
-/* .modal div{
-   display: flex; 
-  justify-content: center;
-  align-items: center;
-
-} */
 
 .modal>button:first-of-type{
   padding: var(--espacements-x_small);
@@ -32,7 +26,6 @@
 }
 
 .modal>button:first-of-type svg{
- 
   width: 35px;
   height: 35px;
 }
@@ -42,12 +35,6 @@
   font-size: 25px;
   margin-bottom: var(--espacements-medium);
 }
-
-
-
-/* .modal .formBtl_form{
-  margin-inline: var(--espacements-large);
-}  */
 
 .modal_btn-add div .formBtl_form .modal_commentaire-textarea{
   color: black;
@@ -77,7 +64,6 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-
 }
 
 .modal_confirm-btn  button svg{
@@ -85,40 +71,18 @@
   height: 35px;
 }
 
-/* .modal_btn-delete .modal .modal_confirm-btn{
- display: flex;
- flex-direction: row;
-  margin-top: var(--espacements-small);
-  justify-content: space-between;
-} */
-
 .modal_btn-delete>.btn-reverse{
   width: 100%;
 }
-
 
 .modal_confirm-btn .btn{
   border: 1px solid var(--accent);
 }
 
-
-/* .modal_btn-delete .modal_confirm-btn{
-  display: flex;
- align-items: center;
- justify-content: center;
- 
-} */
-
 .modal-button-confirm{
   padding: var(--espacements-small);
   border-radius: 20px;
-
 }
-
-/* .modal_btn-delete .modal_confirm-btn button{
-  display: flex;
-  width:50%;
-} */
 
 .modal-selector {
   display: none;
@@ -161,7 +125,7 @@
 }
 
 .modal-button-confirm {
-    background-color: var(--accent);
+  background-color: var(--accent);
 }
 
 .modal-button-cancel {
@@ -180,6 +144,9 @@ body.pas-defilement {
   overflow: hidden;
 }
 
+.modal_display-none{
+  display: none;
+}
 
 .modal_commentaire div:first-of-type{
   margin-top: var(--espacements-x_large);
@@ -206,9 +173,9 @@ body.pas-defilement {
 }
 
 .modal-SAQ .btnWrapper{
-    display: flex;
-    justify-content: space-between;
-    margin-top: var(--espacements-small);
+  display: flex;
+  justify-content: space-between;
+  margin-top: var(--espacements-small);
 }
 
 .modal-SAQ select{
@@ -217,14 +184,13 @@ body.pas-defilement {
   color: black;
 }
 .modal-SAQ .btnWrapper>*  {
-    max-width: 40%;
-    margin: 0;
+  max-width: 40%;
+  margin: 0;
 }
 
 .modal-SAQ input {
-   color: black;
+  color: black;
 }
-
 
 .modal-qte_form{
   margin-top: var(--espacements-medium);
