--- a/public/assets/css/composants/triage.css
+++ b/public/assets/css/composants/triage.css
@@ -1,22 +1,16 @@
 .triage, .triage > * {
     display: flex;
     flex-direction: row;
+    gap: var(--espacements-small);
 }
 
 .triage > * {
-    width: 70px;
+    flex: 1 1 0;
     justify-content: space-between;
 }
 
-.triage > *+* {
-    margin-left: auto;
-}
-
-.triage .btn {
-    padding: 0 var(--espacements-x_small);
-}
-
-.triage .triage_fleche {
-    font-size: 0.75rem;
-    align-self: center;
+.triage > select {
+    margin-bottom: 0;
+    font-size: 0.9rem;
+    padding: 0.2rem 0.75rem;
 }
