--- a/public/assets/css/composants/login.css
+++ b/public/assets/css/composants/login.css
@@ -18,6 +18,10 @@
     width: 100%;
 }
 
+.login_form div>input{
+    width: 100%;
+    border-radius: 20px;
+}
 .login_form div:not(:first-of-type){
     margin-top: var(--espacements-small);
 }
