--- a/public/assets/css/composants/register.css
+++ b/public/assets/css/composants/register.css
@@ -14,6 +14,11 @@
     width: 100%;
 }
 
+.register_form div>input{
+    width: 100%;
+    border-radius: 20px;
+}
+
 .register_form div+*{
     margin-top: var(--espacements-small);
 }
