--- a/public/assets/css/composants/btn.css
+++ b/public/assets/css/composants/btn.css
@@ -7,12 +7,14 @@
     text-align: center;
     border: 2px solid  var(--accent);
     cursor: pointer;
+    fill: white;
 }
 
 .btn:hover{
     background-color: white;
     color: black;
     border: 2px solid  var(--accent);
+    fill: black;
 }
 
 .btn:active, .btn:visited{
