--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -41,6 +41,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 input[type=number] {
   -moz-appearance: textfield;
+  font-family: 'Red Hat Mono', monospace;
 }
 
 
