Ajustement à la couleur de la corbeil en liste et opacité modal

--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -15,11 +15,11 @@ font-family: 'Raleway', sans-serif; */
     Color palette
     */
         --primary: #181818;
-        --primary_fade: #181818f9;
+        --primary_fade: #181818e7;
         --secondary: white;
         --accent: #7E001E;
         --accent_fade: #7e001d9c;
-        --neutral: #D9D9D9;
+        --neutral: #eeeeee;
    
 
     /*
