Ajout CSS pour modification utilisateur par admin

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -36,4 +36,5 @@
 @import "./admin/stats.css";
 @import "./admin/scraper_admin.css";
 @import "./admin/pagination_admin.css";
+@import "./admin/formulaire_admin.css";
 
