petites modifs css de hover et reglage de edit bouteille pour image maison

--- a/public/assets/css/admin/main_admin.css
+++ b/public/assets/css/admin/main_admin.css
@@ -50,6 +50,7 @@
     border: 2px solid rgb(0, 180, 30);
     padding: 10px;
     background-color: white;
+    fill: black;
 }
 
 .admin_main_membres .btn:hover {
