--- a/public/assets/css/composants/btn.css
+++ b/public/assets/css/composants/btn.css
@@ -21,6 +21,10 @@
     color: white;
 }
 
+.btn:active:hover, .btn:visited:hover{
+    color: black;
+}
+
 .btn-reverse{
     background-color: white;
     color: black;
