--- a/public/assets/css/composants/carte_commentaire.css
+++ b/public/assets/css/composants/carte_commentaire.css
@@ -1,3 +1,7 @@
+/* 
+    Dans bouteilles/show
+    Le comportement des cartes de commentaires
+*/
 .carte_commentaire{
     display: flex;
     flex-direction: column;
