--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -1,3 +1,4 @@
+/****************************** RÈGLES GÉNÉRALES DES BÂLISES ********************************************/
 html, body {
   margin: 0;
   padding: 0;
