--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -9,8 +9,7 @@
 @import "./elements/retourAction.css";
 
 
-/*-------- Import composants---------*/
-@import "./composants/welcome.css";
+/*-------- Import composantes---------*/
 @import "./composants/login.css";
 @import "./composants/register.css";
 @import "./composants/liste_celliers.css";
